--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <p>
-                        I'm a 3rd year Computer Science & Engineering Student. Currently I am pursuing B.Tech from SR University in Warangal. I love to do competitive programming and web Development. I am always curious to know how devices work and how they are connected on internet, how they commuicate each other, how internet works. So I am further trying to learn stuff, so i get to know how internet works, how devices are programmed and works in deep detail ...
+                    I’m a 3rd-year B.Tech Computer Science & Engineering student at SR University, with a passion for technology, programming, and web development. I specialize in Python, Java, and web designing.I am continuously exploring advanced concepts in algorithms, data structures, and software design, with the goal of creating impactful and innovative solutions in the tech industry.    
                     </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
