--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="header">
          <div class="container" style="background-image: images/bg9jpg;">
             <nav>
-                <img src="images/mNAME2.jpg" class="logo">
+                <img src="mNAME2.jpg" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -33,7 +33,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/mahi photo.jpg ">
+                    <img src="mahi photo.jpg ">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -104,7 +104,7 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/pho1.jpeg">
+                    <img src="pho1.jpeg">
                     <div class="layer">
                         <h3>Movie Ticket Booking System</h3>
                         <p>A web designing project on interface for booking online tickets for movies and to gather information about movies and theatres</p>
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/pho4.jpeg">
+                    <img src="pho4.jpeg">
                     <div class="layer">
                         <h3>Sign Language Detection Using Convolution Neural Networks</h3>
                         <p>Python project to detect the hand gestures using camera and translating them into text that is useful for communication with mute people.</p>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/pho3.jpeg">
+                    <img src="pho3.jpeg">
                     <div class="layer">
                         <h3>Creating Our Own Security Camera</h3>
                         <p>Security camera using python to provide security check,making aware of mal activities that are happening in our absence, that alerts us when there is a moment in the object.</p>
@@ -137,7 +137,7 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-regular fa-paper-plane"></i>mahendragaddam997@gmail.com</p>
+                    <p><i class="fa-regular fa-paper-plane"></i>mahendragaddam379@gmail.com</p>
                     <p><i class="fa-solid fa-phone"></i>91+ 7659072238</p>
                     <div class="social-icons">
                         <a href="https://www.facebook.com/mahendra.gaddam.180?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
