--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="layer">
                         <h3>Movie Ticket Booking System</h3>
                         <p>A web designing project on interface for booking online tickets for movies and to gather information about movies and theatres</p>
-                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                        <a href="https://github.com/mahendra2238"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -116,7 +116,7 @@
                     <div class="layer">
                         <h3>Sign Language Detection Using Convolution Neural Networks</h3>
                         <p>Python project to detect the hand gestures using camera and translating them into text that is useful for communication with mute people.</p>
-                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                        <a href="https://github.com/mahendra2238"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -124,7 +124,7 @@
                     <div class="layer">
                         <h3>Creating Our Own Security Camera</h3>
                         <p>Security camera using python to provide security check,making aware of mal activities that are happening in our absence, that alerts us when there is a moment in the object.</p>
-                        <a href="#"><i class="fa-solid fa-link"></i></a>
+                        <a href="https://github.com/mahendra2238"><i class="fa-solid fa-link"></i></a>
                     </div>
                 </div>
             </div>
